# rust-learning-projects

./: .gitignore  README.md
001. hello_world/: hello_world
003. guessing_game/src/: main.rs
004. will_it_compile/src/: main.rs
005. local_rpc/: README.md
005. local_rpc/ice_cream_server/: Cargo.toml
005. local_rpc/ice_cream_server/src/: main.rs  main1.rs  main2.rs  main3.rs  main4.rs  maingpt.rs
006. enums/enums/src/: main.rs
007. london_rust_meeting/mail_assault/: Cargo.toml  README.md
007. london_rust_meeting/mail_assault/src/: lib.rs  main.rs
007. london_rust_meeting/mail_assault/tests/: health_check.rs
008. rust-icecream-db-query/: README.md
008. rust-icecream-db-query/icecream-db-query/: Cargo.toml
008. rust-icecream-db-query/icecream-db-query/src/: client.rs  query.rs  server.rs
008. rust-icecream-db-query/icecream-db-query/version_0/: client.rs  main.rs  query.rs  server.rs
009.simple_curl/: Cargo.toml
009.simple_curl/src/: main.rs
010. actor-model-for-icecream-db-query/: Cargo.toml
010. actor-model-for-icecream-db-query/src/: actor.rs  client.rs  lib.rs  main.rs  map_example.rs  message.rs  tracker.rs
