[package]
name = "curld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive", "wrap_help"] }
colored = "2.0.4"
reqwest = { version = "0.11.18", features = ["json", "blocking", "gzip", "deflate"] }
serde_json = "1.0.100"
